feat: add word many route

--- a/doc/api.yaml
+++ b/doc/api.yaml
@@ -173,6 +173,28 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/WordCount"
+  /words/many-word:
+    get:
+      parameters:
+        - name: ids
+          in: query
+          required: true
+          description: array id number
+          schema:
+            type: string
+      tags:
+        - WordsMany
+      security:
+        []
+      summary: Get words in array.
+      description: Get words in array.
+      responses:
+        200:
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Word"
   /words/{id}:
     parameters:
       - name: id
@@ -194,7 +216,7 @@ paths:
           content:
             application/json:
               schema:
-                  $ref: "#/components/schemas/Word"
+                $ref: "#/components/schemas/Word"
   /users:
     post:
       tags:
@@ -223,7 +245,7 @@ paths:
           content:
             application/json:
               schema:
-                  $ref: "#/components/schemas/User"
+                $ref: "#/components/schemas/User"
         422:
           description: Incorrect e-mail or password
   /users/{id}:
@@ -245,7 +267,7 @@ paths:
           content:
             application/json:
               schema:
-                  $ref: "#/components/schemas/User"
+                $ref: "#/components/schemas/User"
         401:
           $ref: '#/components/responses/UnauthorizedError'
         404:
@@ -399,7 +421,7 @@ paths:
           content:
             application/json:
               schema:
-                  $ref: "#/components/schemas/UserWord"
+                $ref: "#/components/schemas/UserWord"
         400:
           description: Bad request
         401:
@@ -433,7 +455,7 @@ paths:
           content:
             application/json:
               schema:
-                  $ref: "#/components/schemas/Statistic"
+                $ref: "#/components/schemas/Statistic"
         401:
           $ref: '#/components/responses/UnauthorizedError'
         404:
@@ -464,7 +486,7 @@ paths:
           content:
             application/json:
               schema:
-                  $ref: "#/components/schemas/Statistic"
+                $ref: "#/components/schemas/Statistic"
         400:
           description: Bad request
         401:
@@ -488,7 +510,7 @@ paths:
           content:
             application/json:
               schema:
-                  $ref: "#/components/schemas/Setting"
+                $ref: "#/components/schemas/Setting"
         401:
           $ref: '#/components/responses/UnauthorizedError'
         404:
@@ -519,7 +541,7 @@ paths:
           content:
             application/json:
               schema:
-                  $ref: "#/components/schemas/Setting"
+                $ref: "#/components/schemas/Setting"
         400:
           description: Bad request
         401:
